switched out degree impl

--- a/documentation/SystemDesign/Design.tex
+++ b/documentation/SystemDesign/Design.tex
@@ -8,7 +8,6 @@
 \usepackage{tabularx}
 \usepackage{multicol}
 \usepackage{hyperref}
-\usepackage{gensymb}
 \hypersetup{
     colorlinks,
     citecolor=black,
@@ -282,7 +281,7 @@ In terms of electrical components, Arduino UNO microcontroller will be used to c
 		\hline 
 		Holding Torque & 350 g-cm \\ 
 		\hline 
-		Step Angle (output shaft) & 5.625\degree/64 \\ 
+		Step Angle (output shaft) & 5.625$^{\circ}$/64 \\ 
 		\hline 
 		Gear Ratio & 1/64 reduction \\ 
 		\hline 
