added exception handling

--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -79,7 +79,7 @@
    Jan 15, 2018 & 1.5 & Edited Module Guide, Added Detailed Class Diagram & Sharon Platkin \\ \hline
    Jan 16, 2018 & 1.6 & Edited Document, refined and defragged definitions & Sharon Platkin \& Christopher McDonald \\ \hline
    Jan 19, 2018 & 1.6 & Added work done by Hardware Team & Nisarg Patel \& Jared Rayner \& Janak Patel \& Christopher McDonald \\ \hline
-
+   Mar 13, 2018 & 2.0 & Added how to handle errors and exceptions & Christopher McDonald \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -360,6 +360,7 @@ The structure and implementation of the view. \\ \\
 \item \textbf{viewStatsBtn} - MouseEvent me \\ returns: \textit{none} \\ description: listens for mouse click on statistics button and displays statistics to the user
 \item \textbf{signUpBtn} - MouseEvent me \\ returns: \textit{User} \\ description: listens for mouse click on sign up button and collects user information
 \item \textbf{loginBtn} - MouseEvent me \\ returns: \textit{User} \\ description: listens for mouse click on sign in button and displays profile if authenticated properly
+\item \textbf{displayError} - Exception exceptionLog \\ returns: \textit{none} \\ description: allows user to read an error or download a log file to send to development team
 \end{itemize}
 
 \section{Communication Protocols} % Chris
