--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -77,7 +77,7 @@
    Feb 13, 2018 & 1.2 & UI and DS Tests & Sharon Platkin \\ \hline
    Feb 15, 2018 & 1.3 & SM, SMC, SS, CV and SR & Christopher McDonald \& Harit Patel \& Sam Hamel \\ \hline
    Feb 16-17, 2018 & 1.4 & Executive Summary and Testing & Christopher McDonald \& Sharon Platkin  \\ \hline
-   Apr 6, 2018 & 2.0 & Added integration tests and fixed grammar & Christopher McDonald  \\ \hline
+   Apr 6, 2018 & 2.0 & Added integration tests, fixed grammar and added test instructions & Christopher McDonald  \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
