--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -415,6 +415,22 @@ The following items should be preformed in succession to set up the system for t
 \end{table}
 \end{center}
 
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: CV11	&Status: ???\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{CV Accuracy Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: CV should detect successful hits and misses}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: 80\% accuracy rate}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: N/A}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: 10 bounces and 10 misses will be thrown in front of the camera}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: CV subsystem detects each throw correctly}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ???}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{CV Accuracy Test}
+\end{table}
+\end{center}
+
 \subsubsection{ShotRecommender}
 
 \begin{center}
