added to tables

--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -1211,6 +1211,7 @@ CV7&&&&&X&&&&&&&&&&&&& \\ \hline
 CV8&&&&&X&&&&&&&&&&&&& \\ \hline
 CV9&&&&&X&&&&&&&&&&&&& \\ \hline
 CV10&&&&&&X&&&&&&&&&&&& \\ \hline
+CV11&&&&&X&&&&&&&&&&&&& \\ \hline
 SR1&&&&&&&&&&&&&&X&X&&& \\ \hline
 SR2&&&&&&&X&&&&&&&X&X&&& \\ \hline
 SR3&&&&&&&&&&&&&&&&&& \\ \hline
@@ -1263,6 +1264,10 @@ SS19&X&&X&&&&&&&&&&&&&&& \\ \hline
 SS20&X&&X&&&&&&&&&&&&&&& \\ \hline
 SS21&X&X&&&X&&&&&&&&&&&&&X \\ \hline
 SS22&X&X&&&X&&&&&&&&&&&&&X \\ \hline
+HI1&X&X&X&X&&&&&&&&&&&X&&& \\ \hline
+HI2&X&X&X&X&&&&&&&&&&&X&&& \\ \hline
+HI3&X&X&X&X&&&&&&&&&&&X&&& \\ \hline
+HI4&X&X&X&X&&&&&&&&&&&X&&& \\ \hline
 \end{tabular}
 \end{table}
 
@@ -1291,6 +1296,7 @@ CV7&&&&&&&&&&&&&&&&&& \\ \hline
 CV8&&&&&&&&&&&&&&&&&& \\ \hline
 CV9&&&&&&&&&&&&&&&&&& \\ \hline
 CV10&&&&&&&&&&&&&&&&&& \\ \hline
+CV11&&&&&&&&&&&&&&&&&& \\ \hline
 SR1&&&&&&&&&&&&&&X&X&&& \\ \hline
 SR2&&&&&&&&&&&&&&X&&&& \\ \hline
 SR3&&&&&&&&&&&&&&X&&&& \\ \hline
@@ -1343,6 +1349,10 @@ SS19&&&&&&&&&&&&&&X&&&& \\ \hline
 SS20&&&&&&&&&&&&&&X&&&& \\ \hline
 SS21&&&&&&&&&&&&&&X&X&&& \\ \hline
 SS22&&&&&&&&&&&&&&X&X&&& \\ \hline
+HI1&&&&&&&&&&&&&&X&X&&& \\ \hline
+HI2&&&&&&&&&&&&&&X&X&&& \\ \hline
+HI3&&&&&&&&&&&&&&X&X&&& \\ \hline
+HI4&&&&&&&&&&&&&&X&X&&& \\ \hline
 \end{tabular}
 \end{table}
 
